--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,3 +26,14 @@ jobs:
 
     - name: Test
       run: go test -v ./...
+
+    - name: Log in to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and Push Docker Image
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/final-main:v1 .
+        docker push ${{ secrets.DOCKER_USERNAME }}/final-main:v1
