--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,6 +8,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  tags:
+    - "*"
 
 jobs:
   # Первая job: Тестирование
@@ -21,6 +23,9 @@ jobs:
         with:
           go-version: '1.22.4'
 
+      - name: Run Linter
+        run: go vet ./...
+
       - name: Build
         run: go build -v ./...
 
@@ -29,6 +34,7 @@ jobs:
 
   # Вторая job: Публикация на DockerHub
   publish:
+    if: startsWith(github.ref, 'refs/tags/') # Условие запуска job
     needs: test # Эта job выполнится только после успешного завершения test
     runs-on: ubuntu-latest
     steps:
